--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
                         <p>Developed a multipage e-commerce website frontend using React with dynamic product listings, cart functionality, and routing.</p>
                         <div class="project-links">
                             <a href="https://github.com/Govind-S-Kathayat/React-Shopping-App.git"><i class="fab fa-github"></i> View Code</a>
-                            <a href="#"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                            <a href="https://invoice-generator-react.netlify.app/"><i class="fas fa-external-link-alt"></i> Live Demo</a>
                         </div>
                     </div>
                 </div>
