--- a/index.html
+++ b/index.html
@@ -743,8 +743,8 @@
 <div class="contact-info">
     <a href="tel:+918218129223"><i class="fas fa-phone"></i> +91 8218129223</a>
     <a href="mailto:govindkathayat2004@gmail.com"><i class="fas fa-envelope"></i> Email</a>
-    <a href="#"><i class="fab fa-linkedin"></i> LinkedIn</a>
-    <a href="https://github.com/Govind-S-Kathayat"><i class="fab fa-github"></i> GitHub</a>
+    <a href="https://www.linkedin.com/in/govind-singh-kathayat-328a5a257" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
+    <a href="https://github.com/Govind-S-Kathayat" target="_blank"><i class="fab fa-github"></i> GitHub</a>
     <a href="Govind_Singh_Kathayat L2 (2).pdf" download="Govind_Singh_Kathayat_Resume.pdf"><i class="fas fa-download"></i> Resume</a>
 </div>
             </div>
@@ -769,35 +769,46 @@
         <div class="skill-category">
             <h3><i class="fas fa-code"></i> Programming Languages</h3>
             <div class="skill-list">
-                <span class="skill-item"><i class="fab fa-php"></i> PHP</span>
-                <span class="skill-item"><i class="fab fa-android"></i> Flutter</span>
                 <span class="skill-item"><i class="fas fa-copyright"></i> C++ (OOPs)</span>
                 <span class="skill-item"><i class="fab fa-golang"></i> Go</span>
                 <span class="skill-item"><i class="fas fa-database"></i> SQL</span>
                 <span class="skill-item"><i class="fab fa-python"></i> Python</span>
-                <span class="skill-item"><i class="fab fa-java"></i> Java</span>
+                <span class="skill-item"><i class="fab fa-php"></i> PHP</span>
                 <span class="skill-item"><i class="fab fa-js-square"></i> JavaScript</span>
                 <span class="skill-item"><i class="fab fa-html5"></i> HTML</span>
                 <span class="skill-item"><i class="fab fa-css3-alt"></i> CSS</span>
             </div>
         </div>
         <div class="skill-category">
-            <h3><i class="fas fa-cogs"></i> Frameworks & Tools</h3>
+            <h3><i class="fas fa-cogs"></i> Frameworks & Libraries</h3>
             <div class="skill-list">
                 <span class="skill-item"><i class="fab fa-react"></i> React.js</span>
-                <span class="skill-item"><i class="fab fa-git-alt"></i> Git</span>
-                <span class="skill-item"><i class="fas fa-database"></i> MySQL</span>
-                <span class="skill-item"><i class="fab fa-bootstrap"></i> Bootstrap</span>
+                <span class="skill-item"><i class="fab fa-node-js"></i> Node.js</span>
+                <span class="skill-item"><i class="fas fa-eye"></i> OpenCV</span>
+                <span class="skill-item"><i class="fas fa-chart-line"></i> NumPy</span>
+                <span class="skill-item"><i class="fas fa-table"></i> Pandas</span>
             </div>
         </div>
         <div class="skill-category">
-            <h3><i class="fas fa-brain"></i> Other Competencies</h3>
+            <h3><i class="fas fa-tools"></i> Tools & Technologies</h3>
             <div class="skill-list">
+                <span class="skill-item"><i class="fab fa-docker"></i> Docker</span>
+                <span class="skill-item"><i class="fas fa-ship"></i> Kubernetes</span>
+                <span class="skill-item"><i class="fab fa-git-alt"></i> Git</span>
+                <span class="skill-item"><i class="fas fa-database"></i> MySQL</span>
+                <span class="skill-item"><i class="fas fa-code"></i> VS Code</span>
+            </div>
+        </div>
+        <div class="skill-category">
+            <h3><i class="fas fa-brain"></i> Core Competencies</h3>
+            <div class="skill-list">
+                <span class="skill-item"><i class="fas fa-exchange-alt"></i> REST APIs</span>
+                <span class="skill-item"><i class="fas fa-tasks"></i> Agile Development</span>
+                <span class="skill-item"><i class="fas fa-server"></i> DevOps Basics</span>
                 <span class="skill-item"><i class="fas fa-project-diagram"></i> Data Structures</span>
                 <span class="skill-item"><i class="fas fa-sort-amount-up"></i> Algorithms</span>
-                <span class="skill-item"><i class="fas fa-lightbulb"></i> Problem Solving</span>
-                <span class="skill-item"><i class="fas fa-robot"></i> Machine Learning</span>
                 <span class="skill-item"><i class="fas fa-cube"></i> OOPs</span>
+                <span class="skill-item"><i class="fas fa-robot"></i> Machine Learning</span>
             </div>
         </div>
     </div>
@@ -814,8 +825,8 @@
         <h3>Invoice Generator (React)</h3>
         <p>A responsive invoice generator application built with React that allows users to create, customize, and download professional invoices.</p>
         <div class="project-links">
-            <a href="https://github.com/Govind-S-Kathayat/Invoice-Genrator-React-.git"><i class="fab fa-github"></i> View Code</a>
-            <a href="https://invoice-generator-react.netlify.app/"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+            <a href="https://github.com/Govind-S-Kathayat/Invoice-Genrator.git"><i class="fab fa-github"></i> View Code</a>
+            <a href="#"><i class="fas fa-external-link-alt"></i> Live Demo</a>
         </div>
     </div>
 </div>
@@ -827,7 +838,7 @@
                         <h3>Hospital Management System</h3>
                         <p>Built a secure, scalable system with PHP, MySQL, and Bootstrap featuring real-time patient records, appointments, and billing.</p>
                         <div class="project-links">
-                            <a href="https://github.com/Govind-S-Kathayat/Hospital-Management-System-Full-Stack-Web-development-"><i class="fab fa-github"></i> View Code</a>
+                            <a href="https://github.com/Govind-S-Kathayat/Hospital-Management-System.git"><i class="fab fa-github"></i> View Code</a>
                         </div>
                     </div>
                 </div>
@@ -851,7 +862,7 @@
                         <h3>Human Activity Recognition</h3>
                         <p>Machine learning classification model that processes accelerometer data to identify human activities using Python.</p>
                         <div class="project-links">
-                            <a href="https://github.com/Govind-S-Kathayat/Humans-Activity-Recognition-ML-.git"><i class="fab fa-github"></i> View Code</a>
+                            <a href="https://github.com/Govind-S-Kathayat/Humans-Activity-Recognition.git"><i class="fab fa-github"></i> View Code</a>
                         </div>
                     </div>
                 </div>
@@ -895,35 +906,35 @@
                 <div class="timeline-item">
                     <div class="timeline-content">
                         <div class="timeline-date">2025</div>
-                        <h3>Software Engineering Job Simulation</h3>
+                        <h3><a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/Sj7temL583QAYpHXD/E6McHJDKsQYh79moz_Sj7temL583QAYpHXD_7yWHn9F7bKukTsnZ8_1750164423382_completion_certificate.pdf" style="text-decoration: none;" target="_blank">Software Engineering Job Simulation</h3></a>
                         <p>JP Morgan Chase & Co.</p>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-content">
                         <div class="timeline-date">2025</div>
-                        <h3>Data Analytics Job Simulation</h3>
-                        <p>Deloitte</p>
-                    </div>
-                </div>
-                <div class="timeline-item">
-                    <div class="timeline-content">
-                        <div class="timeline-date">2025</div>
-                        <h3>Technology Job Simulation</h3>
-                        <p>Deloitte</p>
-                    </div>
-                </div>
-                 <div class="timeline-item">
-                    <div class="timeline-content">
-                        <div class="timeline-date">2025</div>
-                        <h3>Solution Architecture Job Simulation</h3>
+                        <a href="#" style="text-decoration: none;" target="_blank"></a><h3>AWS Cloud Practitioner Essentials </h3></a>
                         <p>AWS</p>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-content">
+                        <div class="timeline-date">2025</div>
+                        <a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/Sj7temL583QAYpHXD/E6McHJDKsQYh79moz_Sj7temL583QAYpHXD_7yWHn9F7bKukTsnZ8_1750164423382_completion_certificate.pdf" style="text-decoration: none;" target="_blank"><h3>Technology Job Simulation</h3></a>
+                        <p>Deloitte</p>
+                    </div>
+                </div>
+                 <div class="timeline-item">
+                    <a class="timeline-content">
+                        <div class="timeline-date">2025</div>
+                        <a href="#" style="text-decoration: none;" target="_blank"></a><h3>Introducing Generative AI with AWS</h3></a>
+                        <p>Udacity</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-content">
                         <div class="timeline-date">2024</div>
-                        <h3>The Joy of Computing using Python</h3>
+                        <a href="#" style="text-decoration: none;" target="_blank"><h3>The Joy of Computing using Python</h3></a>
                         <p>NPTEL</p>
                     </div>
                 </div>
@@ -937,11 +948,11 @@
                 <h3>Let's Connect!</h3>
                 <p>Have a project in mind or want to discuss opportunities? I'd love to hear from you.</p>
                <div class="social-links">
-    <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-    <a href="https://github.com/Govind-S-Kathayat" aria-label="GitHub"><i class="fab fa-github"></i></a>
+    <a href="https://www.linkedin.com/in/govind-singh-kathayat-328a5a257" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+    <a href="https://github.com/Govind-S-Kathayat" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
     <a href="mailto:govindkathayat2004@gmail.com" aria-label="Email"><i class="fas fa-envelope"></i></a>
     <a href="tel:+918218129223" aria-label="Phone"><i class="fas fa-phone"></i></a>
-    <a href="Govind_Singh_Kathayat L2 (2).pdf" download="Govind_Singh_Kathayat_Resume.pdf" aria-label="Download Resume"><i class="fas fa-file-download"></i></a>
+    <a href="Govind_Singh_Kathayat 2025.pdf" download="Govind_Singh_Kathayat_Resume.pdf" aria-label="Download Resume"><i class="fas fa-file-download"></i></a>
 </div>
                 <p>&copy; 2025 Govind Singh Kathayat. All rights reserved.</p>
             </div>
@@ -1024,4 +1035,4 @@
         }
     </script>
 </body>
-                    </html>
+</html>
