--- a/index.html
+++ b/index.html
@@ -745,7 +745,7 @@
     <a href="mailto:govindkathayat2004@gmail.com"><i class="fas fa-envelope"></i> Email</a>
     <a href="https://www.linkedin.com/in/govind-singh-kathayat-328a5a257" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
     <a href="https://github.com/Govind-S-Kathayat" target="_blank"><i class="fab fa-github"></i> GitHub</a>
-    <a href="Govind_Singh_Kathayat L2 (2).pdf" download="Govind_Singh_Kathayat_Resume.pdf"><i class="fas fa-download"></i> Resume</a>
+    <a href="Govind_Singh_Kathayat 2025.pdf" download="Govind_Singh_Kathayat_Resume.pdf"><i class="fas fa-download"></i> Resume</a>
 </div>
             </div>
         </div>
